--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@google/generative-ai": "^0.14.1",
     "@hookform/resolvers": "^3.7.0",
     "@mui/material": "^5.15.21",
+    "@mui/x-date-pickers": "^7.8.0",
+    "@react-google-maps/api": "^2.19.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -15,11 +17,15 @@
     "@types/node": "^16.18.101",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "axios": "^1.7.2",
+    "date-fns": "^3.6.0",
+    "openai": "^4.52.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
+    "use-places-autocomplete": "^4.0.1",
     "web-vitals": "^2.1.4",
     "zod": "^3.23.8"
   },
